<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_bottom_dialog_margin_top">

        <ImageButton
            android:id="@+id/btnFilterCancelOptions"
            android:layout_width="@dimen/filter_bottom_dialog_cancel_options_size"
            android:layout_height="@dimen/filter_bottom_dialog_cancel_options_size"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/filter_bottom_dialog_cancel_button_margin_start"
            android:background="@drawable/background_rounded_ripple_dark_blue"
            android:src="@drawable/ic_close"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvFilterOptions"
            style="@style/FilterBottomDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/filter_options" />

        <TextView
            android:id="@+id/btnFilterDismiss"
            style="@style/FilterBottomDialogDismissButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_bottom_dialog_dismiss_button_height"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/filter_bottom_dialog_dismiss_button_margin_end"
            android:background="@drawable/background_rounded_ripple_orange"
            android:gravity="center"
            android:paddingHorizontal="@dimen/filter_bottom_dialog_dismiss_button_horizontal_size"
            android:text="@string/filter_done" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/filter_bottom_dialog_options_margin_start"
        android:layout_marginTop="@dimen/filter_bottom_dialog_options_margin_top"
        android:layout_marginEnd="@dimen/filter_bottom_dialog_options_margin_end"
        android:layout_marginBottom="@dimen/filter_bottom_dialog_options_margin_bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBrandFilter"
            style="@style/FilterBottomDialogOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_bottom_dialog_single_option_margin_bottom"
            android:text="@string/filter_brand" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_bottom_dialog_spinner_layout_bottom_margin"
            android:background="@drawable/background_rounded_box_gray">

            <Spinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filter_bottom_dialog_spinner_height"
                android:layout_marginStart="@dimen/filter_bottom_dialog_text_start_margin" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvPriceFilter"
            style="@style/FilterBottomDialogOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_bottom_dialog_single_option_margin_bottom"
            android:text="@string/filter_price" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_bottom_dialog_spinner_layout_bottom_margin"
            android:background="@drawable/background_rounded_box_gray">

            <Spinner
                android:id="@+id/spinnerPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filter_bottom_dialog_spinner_height"
                android:layout_marginStart="@dimen/filter_bottom_dialog_text_start_margin" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvSizeFilter"
            style="@style/FilterBottomDialogOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_bottom_dialog_single_option_margin_bottom"
            android:text="@string/filter_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_box_gray">

            <Spinner
                android:id="@+id/spinnerSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filter_bottom_dialog_spinner_height"
                android:layout_marginStart="@dimen/filter_bottom_dialog_text_start_margin" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>